--- a/html/exo/clone-uber-eats.html
+++ b/html/exo/clone-uber-eats.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <link rel="stylesheet" href="/assets/css/exercices&projets.css">
+    <link rel="stylesheet" href="/assets/css/projets.css">
     <script type="text/javascript" src="/assets/js/script.js"></script>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <title>Portfolio Killian B</title>
+    <title>Portfolio - Projets de formations Killian B</title>
 </head>
 
 <body>
@@ -77,7 +77,7 @@
     <div class="background-color">
         <div class="main-background">
             <div class="box-max1100px">
-                <h1 class="main-text">Voici mes projets de formation 2022.</h1>
+                <h1 class="main-text">Clone Uber Eats</h1>
             </div>
         </div>
     </div>
@@ -85,83 +85,17 @@
         <div class="menu-tree">
             <a href="index.html" class="link-menu-tree">Accueil</a>
             <div class="separator-menu-tree">›</div>
-            <a class="link-menu-tree link-menu-tree-here">Projets de formation</a>
-        </div>
-        <div class="gallery_filter_tab">
-            <ul class="list-inline">
-                <a href="javascript:void(0);" class="filter-button active" data-filter="all">Tout
-                    <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                        <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                            <path
-                                d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
-                                style="fill:#fff;" />
-                        </g>
-                    </svg>
-                </a>
-
-                <a href="javascript:void(0);" class="filter-button" data-filter="HTML">HTML / CSS
-                    <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                        <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                            <path
-                                d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
-                                style="fill:#fff;" />
-                        </g>
-                    </svg>
-                </a>
-
-                <a href="javascript:void(0);" class="filter-button" data-filter="JS">Javascript
-                    <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                        <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                            <path
-                                d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
-                                style="fill:#fff;" />
-                        </g>
-                    </svg>
-                </a>
-
-                <a href="javascript:void(0);" class="filter-button" data-filter="Design">Design
-                    <svg class="chevron_mobile" width="100%" height="100%" viewBox="0 0 18 10" version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xml:space="preserve" xmlns:serif="http://www.serif.com/"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
-                        <g transform="matrix(1,0,0,1,-1.39914,-5.90948)">
-                            <path
-                                d="M17.418,6.109C17.688,5.843 18.127,5.843 18.397,6.109C18.527,6.237 18.6,6.411 18.6,6.594C18.6,6.776 18.527,6.95 18.397,7.078L10.489,14.908C10.219,15.174 9.78,15.174 9.51,14.908L1.602,7.078C1.472,6.95 1.399,6.776 1.399,6.594C1.399,6.411 1.472,6.237 1.602,6.109C1.872,5.843 2.311,5.843 2.581,6.109L10,13.25L17.418,6.109Z"
-                                style="fill:#fff;" />
-                        </g>
-                    </svg>
-                </a>
-            </ul>
+            <a href="../exercices&projets.html" class="link-menu-tree">Projets de formation</a>
+            <div class="separator-menu-tree">›</div>
+            <a class="link-menu-tree link-menu-tree-here">Clone Uber Eats</a>
         </div>
 
 
-        <div class="box-flexbox">
-            <div class="row">
-                <div class="filter HTML">
-                    HTML / CSS
-                    <h3 class="title-project-box">Clone Uber Eats</h3>
-                    <li><a href="/html/exo/clone-uber-eats.html" class="button-access-project">Accéder au projet</a></li>
-                </div>
+       <div class="main-img-project">
+<img class="img-project" src="/assets/img/img-project-uber.png">
+       </div>
 
-                <div class="filter Design">
-                    DESIGN
-                    <h3 class="title-project-box">Découverte de figma</h3>
-                    <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au
-                            projet</a>
-                    </li>
-                </div>
-            </div>
-        </div>
-
+       <a href="https://kbld.github.io/uberlanding/" target="_blank" class="button-link-extern-project">Lien du projet</a>
 
     </div>
 
