--- a/html/index.html
+++ b/html/index.html
@@ -75,24 +75,101 @@
         <div class="main-background">
             <div class="box-max1100px">
                 <h1 class="main-text">Voici mon Portfolio où se trouve<br>tous mes projets de formation.</h1>
-                <a class="button-extern" href="https://killianbld.com">Lien de mon portfolio principale</a>
+                <div class="link-box">
+                    <a href="https://killianbld.com" target="_blank" class="sous-link-box">
+                        <h3 class="txt-button-link-box">Mon portfolio principale
+                        </h3>
+                        <svg class="svg-button-link-box" width="100%" height="100%" viewBox="0 0 15 15" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                            <g transform="matrix(1,0,0,1,-8.52425,-8.52425)">
+                                <g transform="matrix(-0.707107,0.707107,0.707107,0.707107,14.7847,-5.41208)">
+                                    <path
+                                        d="M13.989,7.489C13.598,7.098 12.964,7.098 12.573,7.489C10.532,9.53 4.781,15.281 4.781,15.281C4.781,15.281 4.781,15.281 4.781,15.282C4.396,15.684 4.396,16.316 4.781,16.718C4.781,16.719 4.781,16.719 4.781,16.719C4.781,16.719 10.532,22.47 12.573,24.511C12.964,24.902 13.598,24.902 13.989,24.511C13.996,24.504 14.004,24.496 14.011,24.489C14.402,24.098 14.402,23.464 14.011,23.073C12.273,21.335 7.938,17 7.938,17L22.514,17C22.776,17 23.026,16.896 23.211,16.711C23.396,16.526 23.5,16.276 23.5,16.014C23.5,16.005 23.5,15.995 23.5,15.986C23.5,15.724 23.396,15.474 23.211,15.289C23.026,15.104 22.776,15 22.514,15C19.093,15 7.938,15 7.938,15C7.938,15 12.273,10.665 14.011,8.927C14.402,8.536 14.402,7.902 14.011,7.511C14.004,7.504 13.996,7.496 13.989,7.489Z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/killian-blanchard-/" target="_blank" class="sous-link-box">
+                        <h3 class="txt-button-link-box">Linkedin
+                        </h3>
+                        <svg class="svg-button-link-box" width="100%" height="100%" viewBox="0 0 15 15" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                            <g transform="matrix(1,0,0,1,-8.52425,-8.52425)">
+                                <g transform="matrix(-0.707107,0.707107,0.707107,0.707107,14.7847,-5.41208)">
+                                    <path
+                                        d="M13.989,7.489C13.598,7.098 12.964,7.098 12.573,7.489C10.532,9.53 4.781,15.281 4.781,15.281C4.781,15.281 4.781,15.281 4.781,15.282C4.396,15.684 4.396,16.316 4.781,16.718C4.781,16.719 4.781,16.719 4.781,16.719C4.781,16.719 10.532,22.47 12.573,24.511C12.964,24.902 13.598,24.902 13.989,24.511C13.996,24.504 14.004,24.496 14.011,24.489C14.402,24.098 14.402,23.464 14.011,23.073C12.273,21.335 7.938,17 7.938,17L22.514,17C22.776,17 23.026,16.896 23.211,16.711C23.396,16.526 23.5,16.276 23.5,16.014C23.5,16.005 23.5,15.995 23.5,15.986C23.5,15.724 23.396,15.474 23.211,15.289C23.026,15.104 22.776,15 22.514,15C19.093,15 7.938,15 7.938,15C7.938,15 12.273,10.665 14.011,8.927C14.402,8.536 14.402,7.902 14.011,7.511C14.004,7.504 13.996,7.496 13.989,7.489Z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                    <a href="mailto:bk.killianb@gmail.com" target="_blank" class="sous-link-box">
+                        <h3 class="txt-button-link-box">Email
+                        </h3>
+                        <svg class="svg-button-link-box" width="100%" height="100%" viewBox="0 0 15 15" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                            <g transform="matrix(1,0,0,1,-8.52425,-8.52425)">
+                                <g transform="matrix(-0.707107,0.707107,0.707107,0.707107,14.7847,-5.41208)">
+                                    <path
+                                        d="M13.989,7.489C13.598,7.098 12.964,7.098 12.573,7.489C10.532,9.53 4.781,15.281 4.781,15.281C4.781,15.281 4.781,15.281 4.781,15.282C4.396,15.684 4.396,16.316 4.781,16.718C4.781,16.719 4.781,16.719 4.781,16.719C4.781,16.719 10.532,22.47 12.573,24.511C12.964,24.902 13.598,24.902 13.989,24.511C13.996,24.504 14.004,24.496 14.011,24.489C14.402,24.098 14.402,23.464 14.011,23.073C12.273,21.335 7.938,17 7.938,17L22.514,17C22.776,17 23.026,16.896 23.211,16.711C23.396,16.526 23.5,16.276 23.5,16.014C23.5,16.005 23.5,15.995 23.5,15.986C23.5,15.724 23.396,15.474 23.211,15.289C23.026,15.104 22.776,15 22.514,15C19.093,15 7.938,15 7.938,15C7.938,15 12.273,10.665 14.011,8.927C14.402,8.536 14.402,7.902 14.011,7.511C14.004,7.504 13.996,7.496 13.989,7.489Z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                    <a href="https://www.behance.net/killianbld" target="_blank" class="sous-link-box">
+                        <h3 class="txt-button-link-box">Behance
+                        </h3>
+                        <svg class="svg-button-link-box" width="100%" height="100%" viewBox="0 0 15 15" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                            <g transform="matrix(1,0,0,1,-8.52425,-8.52425)">
+                                <g transform="matrix(-0.707107,0.707107,0.707107,0.707107,14.7847,-5.41208)">
+                                    <path
+                                        d="M13.989,7.489C13.598,7.098 12.964,7.098 12.573,7.489C10.532,9.53 4.781,15.281 4.781,15.281C4.781,15.281 4.781,15.281 4.781,15.282C4.396,15.684 4.396,16.316 4.781,16.718C4.781,16.719 4.781,16.719 4.781,16.719C4.781,16.719 10.532,22.47 12.573,24.511C12.964,24.902 13.598,24.902 13.989,24.511C13.996,24.504 14.004,24.496 14.011,24.489C14.402,24.098 14.402,23.464 14.011,23.073C12.273,21.335 7.938,17 7.938,17L22.514,17C22.776,17 23.026,16.896 23.211,16.711C23.396,16.526 23.5,16.276 23.5,16.014C23.5,16.005 23.5,15.995 23.5,15.986C23.5,15.724 23.396,15.474 23.211,15.289C23.026,15.104 22.776,15 22.514,15C19.093,15 7.938,15 7.938,15C7.938,15 12.273,10.665 14.011,8.927C14.402,8.536 14.402,7.902 14.011,7.511C14.004,7.504 13.996,7.496 13.989,7.489Z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                    <a href="https://github.com/kbld" target="_blank" class="sous-link-box">
+                        <h3 class="txt-button-link-box">Github
+                        </h3>
+                        <svg class="svg-button-link-box" width="100%" height="100%" viewBox="0 0 15 15" version="1.1"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            xml:space="preserve" xmlns:serif="http://www.serif.com/"
+                            style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+                            <g transform="matrix(1,0,0,1,-8.52425,-8.52425)">
+                                <g transform="matrix(-0.707107,0.707107,0.707107,0.707107,14.7847,-5.41208)">
+                                    <path
+                                        d="M13.989,7.489C13.598,7.098 12.964,7.098 12.573,7.489C10.532,9.53 4.781,15.281 4.781,15.281C4.781,15.281 4.781,15.281 4.781,15.282C4.396,15.684 4.396,16.316 4.781,16.718C4.781,16.719 4.781,16.719 4.781,16.719C4.781,16.719 10.532,22.47 12.573,24.511C12.964,24.902 13.598,24.902 13.989,24.511C13.996,24.504 14.004,24.496 14.011,24.489C14.402,24.098 14.402,23.464 14.011,23.073C12.273,21.335 7.938,17 7.938,17L22.514,17C22.776,17 23.026,16.896 23.211,16.711C23.396,16.526 23.5,16.276 23.5,16.014C23.5,16.005 23.5,15.995 23.5,15.986C23.5,15.724 23.396,15.474 23.211,15.289C23.026,15.104 22.776,15 22.514,15C19.093,15 7.938,15 7.938,15C7.938,15 12.273,10.665 14.011,8.927C14.402,8.536 14.402,7.902 14.011,7.511C14.004,7.504 13.996,7.496 13.989,7.489Z" />
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="flexbox">
-            <div class="box">
-                <h2 class="sous-title-box">Mes Projets & Exercices</h2>
-                <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+            <div class="flexbox">
+                <div class="box">
+                    <h2 class="sous-title-box">Mes projets de formation</h2>
+                    <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+                </div>
             </div>
+
+
+
         </div>
 
-    </div>
 
-
-    <footer>
-        <div class="box-footer">
-            <h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
-        </div>
-    </footer>
+        <footer>
+            <div class="box-footer">
+                <h3 class="title-copyright">© 2022 Killian Blanchard - Tous droits réservés</h3>
+            </div>
+        </footer>
 
 </body>
 
