--- a/html/exo/clone-uber-eats.html
+++ b/html/exo/clone-uber-eats.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/css/projets.css">
     <script type="text/javascript" src="/assets/js/script.js"></script>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-icon-76x76.png">
