--- a/html/exo/figma.html
+++ b/html/exo/figma.html
@@ -36,7 +36,7 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <title>Portfolio Killian B</title>
+    <title>Portfolio - Projets de formations Killian B</title>
 </head>
 
 <body>
