--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         rel="stylesheet">
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-    <title>Portfolio Killian B</title>
+    <title>Portfolio - Projets de formations Killian B</title>
 </head>
 
 <body>
