--- a/html/exo/clone-uber-eats.html
+++ b/html/exo/clone-uber-eats.html
@@ -83,7 +83,7 @@
     </div>
     <div class="box-max1200px">
         <div class="menu-tree">
-            <a href="index.html" class="link-menu-tree">Accueil</a>
+            <a href="./index.html" class="link-menu-tree">Accueil</a>
             <div class="separator-menu-tree">›</div>
             <a href="../exercices&projets.html" class="link-menu-tree">Projets de formation</a>
             <div class="separator-menu-tree">›</div>
