--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="flexbox">
                 <div class="box">
                     <h2 class="sous-title-box">Mes projets de formation</h2>
-                    <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
+                    <a href="./html/exercices&projets.html" class="button-link-box">Accéder</a>
                 </div>
             </div>
 
