--- a/html/exo/clone-uber-eats.html
+++ b/html/exo/clone-uber-eats.html
@@ -91,11 +91,11 @@
         </div>
 
 
-       <div class="main-img-project">
-<img class="img-project" src="/assets/img/img-project-uber.png">
-       </div>
-
-       <a href="https://kbld.github.io/uberlanding/" target="_blank" class="button-link-extern-project">Lien du projet</a>
+        <div class="main-img-project">
+            <img class="img-project" src="../../assets/img/img-project-uber.png">
+        </div>
+        <a href="https://kbld.github.io/uberlanding/" target="_blank" class="button-link-extern-project">Lien du
+            projet</a>
 
     </div>
 
