--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -8,8 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <link rel="stylesheet" href="/assets/css/exercices&projets.css">
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/exercices&projets.css">
+    <script type="text/javascript" src="../assets/js/script.js"></script>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
