--- a/html/clone-uber-eats.html
+++ b/html/clone-uber-eats.html
@@ -85,7 +85,7 @@
         <div class="menu-tree">
             <a href="./index.html" class="link-menu-tree">Accueil</a>
             <div class="separator-menu-tree">›</div>
-            <a href="../exercices&projets.html" class="link-menu-tree">Projets de formation</a>
+            <a href="./exercices&projets.html" class="link-menu-tree">Projets de formation</a>
             <div class="separator-menu-tree">›</div>
             <a class="link-menu-tree link-menu-tree-here">Clone Uber Eats</a>
         </div>
