--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -83,9 +83,9 @@
     </div>
     <div class="box-max1200px">
         <div class="menu-tree">
-            <a href="index.html" class="link-menu-tree">Accueil</a>
+            <a href="../index.html" class="link-menu-tree">Accueil</a>
             <div class="separator-menu-tree">›</div>
-            <a class="link-menu-tree link-menu-tree-here">Projets de formation</a>
+            <a href="./exercices&projets.html" class="link-menu-tree link-menu-tree-here">Projets de formation</a>
         </div>
         <div class="gallery_filter_tab">
             <ul class="list-inline">
@@ -149,13 +149,13 @@
                 <div class="filter HTML">
                     HTML / CSS
                     <h3 class="title-project-box">Clone Uber Eats</h3>
-                    <li><a href="/html/exo/clone-uber-eats.html" class="button-access-project">Accéder au projet</a></li>
+                    <li><a href="../html/clone-uber-eats.html" class="button-access-project">Accéder au projet</a></li>
                 </div>
 
                 <div class="filter Design">
                     DESIGN
                     <h3 class="title-project-box">Découverte de figma</h3>
-                    <li><a href="/html/exo/projet-1-html.html" class="button-access-project">Accéder au
+                    <li><a href="../html/clone-uber-eats.html" class="button-access-project">Accéder au
                             projet</a>
                     </li>
                 </div>
