--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="../index.html">Accueil</a></li>
-                    <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
+                    <li><a class="link-title" href="./index.html">Accueil</a></li>
+                    <li><a class="link-title" href="./html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
         </div>
