--- a/html/clone-uber-eats.html
+++ b/html/clone-uber-eats.html
@@ -44,7 +44,7 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <a href="../index.html">
+                <a href="./">
                     <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xml:space="preserve" xmlns:serif="http://www.serif.com/"
@@ -66,7 +66,7 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="../index.html">Accueil</a></li>
+                    <li><a class="link-title" href="./">Accueil</a></li>
                     <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
