--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -10,7 +10,6 @@
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <link rel="stylesheet" href="../assets/css/projets.css">
     <script type="text/javascript" src="../assets/js/script.js"></script>
-
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
@@ -29,10 +28,7 @@
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
     <!-- or -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
@@ -40,7 +36,6 @@
 </head>
 
 <body>
-    
     <header>
         <div class="navbar">
             <div class="box-navbar">
@@ -66,13 +61,12 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="./">Accueil</a></li>
+                    <li><a class="link-title" href="../index.html">Accueil</a></li>
                     <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
         </div>
     </header>
-
 
     <div class="background-color">
         <div class="main-background">
@@ -81,6 +75,7 @@
             </div>
         </div>
     </div>
+
     <div class="box-max1200px">
         <div class="menu-tree">
             <a href="../index.html" class="link-menu-tree">Accueil</a>
@@ -143,7 +138,6 @@
             </ul>
         </div>
 
-
         <div class="box-flexbox">
             <div class="row">
                 <div class="filter HTML">
@@ -161,8 +155,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
 
     <footer>
