--- a/html/exercices&projets.html
+++ b/html/exercices&projets.html
@@ -39,7 +39,7 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <a href="./">
+                <a href="/">
                     <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xml:space="preserve" xmlns:serif="http://www.serif.com/"
@@ -61,8 +61,8 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="../index.html">Accueil</a></li>
-                    <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
+                    <li><a class="link-title" href="/">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
         </div>
