--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <a href="./">
+                <a href="/">
                     <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xml:space="preserve" xmlns:serif="http://www.serif.com/"
@@ -62,8 +62,8 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="./">Accueil</a></li>
-                    <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
+                    <li><a class="link-title" href="/">Accueil</a></li>
+                    <li><a class="link-title" href="/html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
         </div>
@@ -155,7 +155,7 @@
             <div class="flexbox">
                 <div class="box">
                     <h2 class="sous-title-box">Mes projets de formation</h2>
-                    <a href="./html/exercices&projets.html" class="button-link-box">Accéder</a>
+                    <a href="/html/exercices&projets.html" class="button-link-box">Accéder</a>
                 </div>
             </div>
 
