--- a/html/clone-uber-eats.html
+++ b/html/clone-uber-eats.html
@@ -8,8 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script>
-    <link rel="stylesheet" href="/assets/css/projets.css">
-    <script type="text/javascript" src="/assets/js/script.js"></script>
+    <link rel="stylesheet" href="../assets/css/projets.css">
+    <script type="text/javascript" src="../assets/js/script.js"></script>
 
     <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -44,7 +44,7 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <a href="/">
+                <a href="../index.html">
                     <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xml:space="preserve" xmlns:serif="http://www.serif.com/"
@@ -66,8 +66,8 @@
                     </svg>
                 </a>
                 <ul class="link-navbar">
-                    <li><a class="link-title" href="/">Accueil</a></li>
-                    <li><a class="link-title" href="/html/exercices&projets.html">Projets de formation</a></li>
+                    <li><a class="link-title" href="../index.html">Accueil</a></li>
+                    <li><a class="link-title" href="../html/exercices&projets.html">Projets de formation</a></li>
                 </ul>
             </div>
         </div>
@@ -83,9 +83,9 @@
     </div>
     <div class="box-max1200px">
         <div class="menu-tree">
-            <a href="./index.html" class="link-menu-tree">Accueil</a>
+            <a href="../index.html" class="link-menu-tree">Accueil</a>
             <div class="separator-menu-tree">›</div>
-            <a href="./exercices&projets.html" class="link-menu-tree">Projets de formation</a>
+            <a href="../html/exercices&projets.html" class="link-menu-tree">Projets de formation</a>
             <div class="separator-menu-tree">›</div>
             <a class="link-menu-tree link-menu-tree-here">Clone Uber Eats</a>
         </div>
