--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header>
         <div class="navbar">
             <div class="box-navbar">
-                <a href="/index.html">
+                <a href="./index.html">
                     <svg class="logo" width="100%" height="100%" viewBox="0 0 3333 3798" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         xml:space="preserve" xmlns:serif="http://www.serif.com/"
